[gd_scene load_steps=4 format=3 uid="uid://dq7kai76a5l0x"]

[ext_resource type="Script" uid="uid://cjlq07d5k5rto" path="res://src/start/start_menu.gd" id="1_0c20j"]
[ext_resource type="PackedScene" uid="uid://dkpf600oiefn6" path="res://src/start/options_container.tscn" id="1_g0r6h"]
[ext_resource type="PackedScene" uid="uid://c52ufobqk72i" path="res://src/start/players_grid.tscn" id="2_g0r6h"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0c20j")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" parent="CenterContainer" instance=ExtResource("1_g0r6h")]
layout_mode = 2

[node name="PlayersGrid" parent="CenterContainer" instance=ExtResource("2_g0r6h")]
layout_mode = 2

[connection signal="option_select" from="CenterContainer/OptionsContainer" to="." method="_on_options_container_option_select"]
[connection signal="back_pressed" from="CenterContainer/PlayersGrid" to="." method="_on_players_grid_back_pressed"]
[connection signal="selection_finished" from="CenterContainer/PlayersGrid" to="." method="_on_players_grid_selection_finished"]
